# horus

./: .dockerignore  .env.example  .gitignore  AGENTS.md  LICENSE  ORIGINAL_REQUEST.md  PRODUCT.md  README.md  TODO.md  bugs.md  defendingagents_claude_code_prompt.md  docker-compose.yml  fly.toml  progress.md  run.py  security_expert_review.md
.github/workflows/: ci.yml  deploy-docs.yml  deploy.yml
backend/: Dockerfile  main.py  requirements.txt  ruff.toml
backend/agents/: analyst_agent.py  analyst_team.py  base.py  blue_agent.py  (+12 more)
docs/: PRIVACY.md  agents.md  api-reference.md  data-models.md  deployment.md  frontend.md  index.md  iris.md  overview.md  package-lock.json  package.json  scanners.md  security.md
e2e/: package-lock.json  package.json  tsconfig.json
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
infra/: README.md
iris/: __init__.py  __main__.py  config.py  daemon.py  horus-iris.service  install.sh  pyproject.toml  reporter.py  requirements.txt  uninstall.sh
iris-rs/: Cargo.toml  horus-iris.service  install.sh  uninstall.sh
iris-rs/src/: config.rs  daemon.rs  main.rs  reporter.rs
iris-rs/src/monitors/: auditd.rs  auth_log.rs  fim.rs  journald.rs  mod.rs  network.rs  process.rs
iris/monitors/: __init__.py  auditd.py  auth_log.py  fim.py  journald.py  network.py  process.py
landing/: Dockerfile  _redirects  astro.config.mjs  features.md  fly.toml  index.html  nginx.conf  package-lock.json  package.json  services.html
memory/: project_supabase_http2_concurrency.md
(+303 files in other folders)
