[package]
name = "horus-iris"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "horus-iris"
path = "src/main.rs"

[dependencies]
tokio       = { version = "1",    features = ["full"] }
serde       = { version = "1",    features = ["derive"] }
serde_json  = "1"
serde_yaml  = "0.9"
reqwest     = { version = "0.12", features = ["json"] }
notify      = "6"
procfs      = "0.16"
regex       = "1"
clap        = { version = "4",    features = ["derive"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow      = "1"

[profile.release]
opt-level = 3
lto       = true
strip     = true
