[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "horus-iris"
version = "0.1.0"
description = "Horus Iris — lightweight Unix security agent"
requires-python = ">=3.9"
dependencies = [
    "psutil>=5.9.0",
    "watchdog>=3.0.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
]

[project.scripts]
horus-iris = "iris.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["iris*"]
